--- a/application/index/view/orderlay/buycar_three.html
+++ b/application/index/view/orderlay/buycar_three.html
@@ -12,7 +12,9 @@
             <table border="0" style="width:1000px; text-align:center;" cellspacing="0" cellpadding="0">
               <tr height="35">
                 <td style="font-size:18px;">
-                	感谢您在本店购物！您的订单已提交成功，请记住您的订单号: <font color="#ff4e00">{$order_snn['order_sn']}</font>
+
+                	感谢您在本店购物！您的订单已提交成功，请记住您的订单号: <font color="#ff4e00">{$order_sn}</font>
+
                 </td>
               </tr>
               <tr>
@@ -24,7 +26,9 @@
 
               <tr>
                 <td>
-                	<a href="/index/index/index">首页</a> &nbsp; &nbsp; <a href="#">用户中心</a>
+
+                	<a href="/index/index/index">首页</a> &nbsp; &nbsp; <a href="/index/Personalcenter/my_order">用户中心</a>
+
                 </td>
               </tr>
             </table>        	
