--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -76,81 +76,15 @@
                 <span class="fr">16R</span>
             </div>
         </div>
-        <div class="hot_pro">        	
+
+        
+        <div class="hot_pro">  
+
         	<div id="featureContainer">
                 <div id="feature">
                     <div id="block">
                         <div id="botton-scroll">
-                            <ul class="featureUL">
-                                <li class="featureBox">
-                                    <div class="box">
-                                    	<div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot1.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>德国进口</h2>
-                                            德亚全脂纯牛奶200ml*48盒
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>189</span></font> &nbsp; 26R
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot2.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>iphone 6S</h2>
-                                            Apple/苹果 iPhone 6s Plus公开版
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>5288</span></font> &nbsp; 25R
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot3.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>倩碧特惠组合套装</h2>
-                                            倩碧补水组合套装8折促销
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>368</span></font> &nbsp; 18R
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="featureBox">
-                                    <div class="box">
-                                        <div class="h_icon"><img src="/front/images/hot.png" width="50" height="50" /></div>
-                                        <div class="imgbg">
-                                        	<a href="#"><img src="/front/images/hot4.jpg" width="160" height="136" /></a>
-                                        </div>                                        
-                                        <div class="name">
-                                        	<a href="#">
-                                            <h2>品利特级橄榄油</h2>
-                                            750ml*4瓶装组合 西班牙原装进口
-                                            </a>
-                                        </div>
-                                        <div class="price">
-                                            <font>￥<span>280</span></font> &nbsp; 30R
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                        
                         </div>
                     </div>
                     <a class="h_prev" href="/front/javascript:void();">Previous</a>
@@ -233,7 +167,6 @@
     </div>
 	<!--Begin 进口 生鲜 Begin-->
     <div class="i_t mar_10">
-
     	<span class="floor_num">1F</span>
     	<span class="fl">进口 <b>·</b> 生鲜</span>                
         <span class="i_mores fr"><a href="#">进口咖啡</a>&nbsp; &nbsp; &nbsp; <a href="#">进口酒</a>&nbsp; &nbsp; &nbsp; <a href="#">进口母婴</a>&nbsp; &nbsp; &nbsp; <a href="#">新鲜蔬菜</a>&nbsp; &nbsp; &nbsp; <a href="#">新鲜水果</a></span>
@@ -258,6 +191,7 @@
             </div>
         </div>
 
+
         
         <div class="fresh_mid">
             {foreach $one as $keyarr => $voarr}
@@ -267,7 +201,7 @@
                     <div class="price">
                     	<font>￥<span>{$voarr.goods_price}</span></font> &nbsp; 26R
                     </div>
-                    <div class="img"><a href="#"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
+                    <div class="img"><a href="/index/goods/goods_details/id/{$voarr.goods_id}"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
                 </li>
                </ul>
               
@@ -309,6 +243,7 @@
         </div>
         <div class="fresh_mid">
 
+
             {foreach $two as $keyarr => $voarr}
         	<ul>
             	<li>
@@ -316,11 +251,12 @@
                     <div class="price">
                     	<font>￥<span>{$voarr.goods_price}</span></font> &nbsp; 26R
                     </div>
-                    <div class="img"><a href="#"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
+                    <div class="img"><a href="/index/goods/goods_details/id/{$voarr.goods_id}"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
                 </li>
                </ul>
               
         {/foreach}
+
 
         </div>
         <div class="fresh_right">
@@ -352,11 +288,14 @@
             </div>
             <div class="fresh_txt">
             	<div class="fresh_txt_c">
-                	<a href="#">洗发护发</a><a href="#">牙刷牙膏</a><a href="#">面膜</a><a href="#">补水面膜</a><a href="#">香水</a><a href="#">面霜</a><a href="#">洗面奶</a><a href="#">脱毛膏</a><a href="#">沐浴露</a>
+
+                	<a href="#">洗发护发</a><a href="/index/goods/goods_details/id/{$voarr.goods_id}">牙刷牙膏</a><a href="#">面膜</a><a href="#">补水面膜</a><a href="#">香水</a><a href="#">面霜</a><a href="#">洗面奶</a><a href="#">脱毛膏</a><a href="#">沐浴露</a>
+
                 </div>
             </div>
         </div>
         <div class="fresh_mid">
+
 
         	{foreach $three as $keyarr => $voarr}
         	<ul>
@@ -370,6 +309,7 @@
                </ul>
               
         {/foreach}
+
 
         </div>
         <div class="fresh_right">
@@ -410,6 +350,7 @@
         </div>
         <div class="fresh_mid">
 
+
         	{foreach $fouraa as $keyarr => $voarr}
         	<ul>
             	<li>
@@ -417,11 +358,12 @@
                     <div class="price">
                     	<font>￥<span>{$voarr.goods_price}</span></font> &nbsp; 26R
                     </div>
-                    <div class="img"><a href="#"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
+                    <div class="img"><a href="/index/goods/goods_details/id/{$voarr.goods_id}"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
                 </li>
                </ul>
               
         {/foreach}
+
 
         </div>
         <div class="fresh_right">
@@ -459,6 +401,7 @@
         </div>
         <div class="fresh_mid">
 
+
         	{foreach $five as $keyarr => $voarr}
         	<ul>
             	<li>
@@ -466,11 +409,12 @@
                     <div class="price">
                     	<font>￥<span>{$voarr.goods_price}</span></font> &nbsp; 26R
                     </div>
-                    <div class="img"><a href="#"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
+                    <div class="img"><a href="/index/goods/goods_details/id/{$voarr.goods_id}"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
                 </li>
                </ul>
               
         {/foreach}
+
 
         </div>
         <div class="fresh_right">
@@ -508,6 +452,7 @@
         </div>
         <div class="fresh_mid">
 
+
         	{foreach $six as $keyarr => $voarr}
         	<ul>
             	<li>
@@ -515,11 +460,12 @@
                     <div class="price">
                     	<font>￥<span>{$voarr.goods_price}</span></font> &nbsp; 26R
                     </div>
-                    <div class="img"><a href="#"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
+                    <div class="img"><a href="/index/goods/goods_details/id/{$voarr.goods_id}"><img src="{$voarr.goods_img}" width="185" height="155" /></a></div>
                 </li>
                </ul>
               
         {/foreach}
+
 
         </div>
         <div class="fresh_right">
