--- a/application/index/view/html/Regist.html
+++ b/application/index/view/html/Regist.html
@@ -29,55 +29,8 @@
     <script type="text/javascript" src="/front/js/tban.js"></script>
     
 	<script type="text/javascript" src="/front/js/lrscroll_1.js"></script>
-        <script src="/front/js/jquery-3.3.1.min.js"></script>
-        <script>
-            function nameone(){
-                username=$('#username').val();
-                $.post("/index/usera/user_register",{name:username},
-                function (data){
-                    if(data==0){
-                        mas="用户名已被注册";
-                    }else if(data==3){
-                        mas="用户名不能为空";
-                    }
-                } ); $('#mas').html(mas);
-               
-            }
-            function pwdtwo(){
-                userpwd=$('#userpwd').val();
-              if(!userpwd){
-                  acc="密码不能为空";
-              }
-              $('#acc').html(acc);
-            }
-            function emailthree(){
-                useremail=$('#useremail').val();
-               if(!useremail){
-                   ema="邮件不能为空";
-               }
-                ;$('#ema').html(ema);
-            }
-            function phofour(){
-                userphone=$('#userphone').val();
-                 if(!userphone){
-                     pho="手机号不能为空";
-                 }
-                 ;$('#pho').val(pho);
-            }
-            function Regist(){
-                username=$('#username').val();
-                userpwd=$('#userpwd').val();
-                useremail=$('#useremail').val();
-                userphone=$('#userphone').val();
-                userimg=$('#userimg').val();
-               $.post("/index/usera/user_register",{"name":username,"pwd":userpwd,"email":useremail,"phone":userphone,"img":userimg},
-                function (data){
-                    if(data==5){
-                       location.href="/index/index/index";
-                    }    
-                })
-    }
-        </script>
+    
+    
 <title>尤洪</title>
 </head>
 <body>  
@@ -85,7 +38,7 @@
 <div class="soubg">
 	<div class="sou">
         <span class="fr">
-        	<span class="fl">你好，请<a href="/index/usera/user_index">登录</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp; </span>
+        	<span class="fl">你好，请<a href="Login.html">登录</a>&nbsp; <a href="Regist.html" style="color:#ff4e00;">免费注册</a>&nbsp; </span>
             <span class="fl">|&nbsp;关注我们：</span>
             <span class="s_sh"><a href="#" class="sh1">新浪</a><a href="#" class="sh2">微信</a></span>
             <span class="fr">|&nbsp;<a href="#">手机版&nbsp;<img src="/front/images/s_tel.png" align="absmiddle" /></a></span>
@@ -101,36 +54,50 @@
 	<div class="regist">
     	<div class="log_img"><img src="/front/images/l_img.png" width="611" height="425" /></div>
 		<div class="reg_c">
-                    <form method="post">
+        	<form>
             <table border="0" style="width:420px; font-size:14px; margin-top:20px;" cellspacing="0" cellpadding="0">
               <tr height="50" valign="top">
               	<td width="95">&nbsp;</td>
                 <td>
                 	<span class="fl" style="font-size:24px;">注册</span>
-                    <span class="fr">已有商城账号，<a href="/index/usera/user_index" style="color:#ff4e00;">我要登录</a></span>
+                    <span class="fr">已有商城账号，<a href="Login.html" style="color:#ff4e00;">我要登录</a></span>
                 </td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;用户名 &nbsp;</td>
-                <td><input type="text" value="" class="l_user" name="username" id="username" onblur='nameone()'/><span id="mas"></span></td>
+                <td><input type="text" value="" class="l_user" /></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;密码 &nbsp;</td>
-                <td><input type="password" value="" class="l_pwd" name="userpwd" id="userpwd" onblur='pwdtwo()'/><span id="acc"></span></td>
+                <td><input type="password" value="" class="l_pwd" /></td>
+              </tr>
+              <tr height="50">
+                <td align="right"><font color="#ff4e00">*</font>&nbsp;确认密码 &nbsp;</td>
+                <td><input type="password" value="" class="l_pwd" /></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;邮箱 &nbsp;</td>
-                <td><input type="text" value="" class="l_email" name="useremail" id="useremail" onblur='emailthree()'/><span id="ema"></span></td>
+                <td><input type="text" value="" class="l_email" /></td>
               </tr>
               <tr height="50">
                 <td align="right"><font color="#ff4e00">*</font>&nbsp;手机 &nbsp;</td>
-                <td><input type="text" value="" class="l_tel" name="userphone" id="userphone"  onblur='phofour()'/><span id="pho"></span></td>
+                <td><input type="text" value="" class="l_tel" /></td>
               </tr>
-                 <tr height="50">
-                <td align="right"><font color="#ff4e00">*</font>&nbsp;头像 &nbsp;</td>
-                <td><input type="file" value=""name="userimg" id="userimg" /></td>
+              <tr height="50">
+                <td align="right">邀请人会员名 &nbsp;</td>
+                <td><input type="text" value="" class="l_mem" /></td>
               </tr>
-             
+              <tr height="50">
+                <td align="right">邀请人ID号 &nbsp;</td>
+                <td><input type="text" value="" class="l_num" /></td>
+              </tr>
+              <tr height="50">
+                <td align="right"> <font color="#ff4e00">*</font>&nbsp;验证码 &nbsp;</td>
+                <td>
+                    <input type="text" value="" class="l_ipt" />
+                    <a href="#" style="font-size:12px; font-family:'宋体';">换一张</a>
+                </td>
+              </tr>
               <tr>
               	<td>&nbsp;</td>
                 <td style="font-size:12px; padding-top:20px;">
@@ -141,7 +108,7 @@
               </tr>
               <tr height="60">
               	<td>&nbsp;</td>
-                <td><input type="button" value="立即注册" class="log_btn" onclick='Regist()'/></td>
+                <td><input type="submit" value="立即注册" class="log_btn" /></td>
               </tr>
             </table>
             </form>
