--- a/application/index/view/layout_1.html
+++ b/application/index/view/layout_1.html
@@ -1,4 +1,5 @@
-{include file='public/header/member_layout_header' /}
+{include file='public/header/header1' /}
+{include file='public/header/header2' /}
 {__CONTENT__}
 {include file='public/footer/footer1' /}
 {include file='public/footer/footer2' /}
