--- a/application/index/view/public/header/header2.html
+++ b/application/index/view/public/header/header2.html
@@ -1,81 +1,15 @@
 
-<link type="text/css" rel="stylesheet" href="/front/css/style.css" />
-    <!--[if IE 6]>
-    <script src="/front/js/iepng.js" type="text/javascript"></script>
-        <script type="text/javascript">
-           EvPNG.fix('div, ul, img, li, input, a'); 
-        </script>
-    <![endif]-->    
-    <script type="text/javascript" src="/front/js/jquery-1.11.1.min_044d0927.js"></script>
-	<script type="text/javascript" src="/front/js/jquery.bxslider_e88acd1b.js"></script>
-    
-    <script type="text/javascript" src="/front/js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="/front/js/menu.js"></script>    
-        
-	<script type="text/javascript" src="/front/js/select.js"></script>
-    
-	<script type="text/javascript" src="/front/js/lrscroll.js"></script>
-    
-    <script type="text/javascript" src="/front/js/iban.js"></script>
-    <script type="text/javascript" src="/front/js/fban.js"></script>
-    <script type="text/javascript" src="/front/js/f_ban.js"></script>
-    <script type="text/javascript" src="/front/js/mban.js"></script>
-    <script type="text/javascript" src="/front/js/bban.js"></script>
-    <script type="text/javascript" src="/front/js/hban.js"></script>
-    <script type="text/javascript" src="/front/js/tban.js"></script>
-    
-    <script type="text/javascript" src="/front/js/lrscroll_1.js"></script>
-    <script>
-        function sou(){
-            souindex=$('#text').val();
-            $.post('/index/index/souindex',{souindex:souindex},
-            function(data){
-                if(data==1){
-                    alert("暂无商品");
-                }else{
-                    alert("商品详情");
-                }
-            })
-        }
-    </script>
 <div class="top">
     <div class="logo"><a href="Index.html"><img src="/front/images/logo.png" /></a></div>
     <div class="search">
-        <form action="/index/index/souindex" method="post">
-            <input type="text" value="" id="text" class="s_ipt" />
-                <input type="button" value="搜索" class="s_btn" onclick="sou()"/>
+    	<form>
+        	<input type="text" value="" class="s_ipt" />
+            <input type="submit" value="搜索" class="s_btn" />
         </form>                      
         <span class="fl"><a href="#">咖啡</a><a href="#">iphone 6S</a><a href="#">新鲜美食</a><a href="#">蛋糕</a><a href="#">日用品</a><a href="#">连衣裙</a></span>
     </div>
-
-    <div class="i_car">
-    	<div class="car_t">购物车 [ <span>3</span> ]</div>
-        <div class="car_bg">
-       		<!--Begin 购物车未登录 Begin-->
-        	<div class="un_login">还未登录！<a href="/index/usera/user_index" style="color:#ff4e00;">马上登录</a> 查看购物车！</div>
-            <!--End 购物车未登录 End-->
-            <!--Begin 购物车已登录 Begin-->
-            <ul class="cars">
-            	<li>
-                	<div class="img"><a href="#"><img src="/front/images/car1.jpg" width="58" height="58" /></a></div>
-                    <div class="name"><a href="#">法颂浪漫梦境50ML 香水女士持久清新淡香 送2ML小样3只</a></div>
-                    <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                </li>
-                <li>
-                	<div class="img"><a href="#"><img src="/front/images/car2.jpg" width="58" height="58" /></a></div>
-                    <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                    <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                </li>
-                <li>
-                	<div class="img"><a href="#"><img src="/front/images/car2.jpg" width="58" height="58" /></a></div>
-                    <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                    <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                </li>
-            </ul>
-            <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>1058</span></div>
-            <div class="price_a"><a href="#">去购物车结算</a></div>
-            <!--End 购物车已登录 End-->
-        </div>
+   <div class="i_car">
+        <div class="car_t"><a href="/index/goods_car/buycar">购物车 </a></div>
 
     </div>
 </div>
@@ -328,6 +262,7 @@
             </div>
         </div>  
 
+
         <!--End 商品分类详情 End-->     
         
     	<ul class="menu_r">   
@@ -342,6 +277,7 @@
              
         </ul>
         
+
 
         <div class="m_ad">中秋送好礼！</div>
     </div>
