--- a/application/index/view/public/header/member_layout_header.html
+++ b/application/index/view/public/header/member_layout_header.html
@@ -99,11 +99,10 @@
         </span>
         <!--End 所在收货地区 End-->
         <span class="fr">
-<<<<<<< HEAD
-            <span class="fl">你好，请<a href="Login.html">登录</a>&nbsp; <a href="Regist.html" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
-=======
-            <span class="fl">你好，请<a href="/index/usera/user_index">登录</a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="#">我的订单</a>&nbsp;|</span>
->>>>>>> dev
+
+            <span class="fl">你好<a href="/index/usera/user_index"> <?php if(Session::get('name')==''){?>请登录
+                       <?php }else{ echo Session::get('name');?><?php } ?></a>&nbsp; <a href="/index/usera/toregister" style="color:#ff4e00;">免费注册</a>&nbsp;|&nbsp;<a href="/index/index/index">首页</a>&nbsp;|&nbsp;<a href="/index/Personalcenter/my_order">个人中心</a>&nbsp;|</span>
+
             <span class="ss">
                 <div class="ss_list">
                     <a href="#">收藏夹</a>
@@ -159,42 +158,14 @@
             </form>                      
             <span class="fl"><a href="#">咖啡</a><a href="#">iphone 6S</a><a href="#">新鲜美食</a><a href="#">蛋糕</a><a href="#">日用品</a><a href="#">连衣裙</a></span>
         </div>
-        <div class="i_car">
-<<<<<<< HEAD
             <div class="i_car">
         <div class="car_t"><a href="/index/goods_car/buycar">购物车 </a></div>
     
            </div>
             
-=======
-            <div class="car_t">购物车 [ <span>3</span> ]</div>
-            <div class="car_bg">
-                <!--Begin 购物车未登录 Begin-->
-                <div class="un_login">还未登录！<a href="/index/usera/user_index" style="color:#ff4e00;">马上登录</a> 查看购物车！</div>
-                <!--End 购物车未登录 End-->
-                <!--Begin 购物车已登录 Begin-->
-                <ul class="cars">
-                    <li>
-                        <div class="img"><a href="#"><img src="/front/images/car1.jpg" width="58" height="58" /></a></div>
-                        <div class="name"><a href="#">法颂浪漫梦境50ML 香水女士持久清新淡香 送2ML小样3只</a></div>
-                        <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                    </li>
-                    <li>
-                        <div class="img"><a href="#"><img src="/front/images/car2.jpg" width="58" height="58" /></a></div>
-                        <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                        <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                    </li>
-                    <li>
-                        <div class="img"><a href="#"><img src="/front/images/car2.jpg" width="58" height="58" /></a></div>
-                        <div class="name"><a href="#">香奈儿（Chanel）邂逅活力淡香水50ml</a></div>
-                        <div class="price"><font color="#ff4e00">￥399</font> X1</div>
-                    </li>
-                </ul>
-                <div class="price_sum">共计&nbsp; <font color="#ff4e00">￥</font><span>1058</span></div>
-                <div class="price_a"><a href="#">去购物车结算</a></div>
-                <!--End 购物车已登录 End-->
->>>>>>> dev
+
             </div>
+
         </div>
     </div>
 </div>
@@ -207,37 +178,16 @@
             <div class="left_m">
                 <div class="left_m_t t_bg1">订单中心</div>
                 <ul>
-                    <li><a href="Member_Order.html">我的订单</a></li>
-                    <li><a href="Member_Address.html">收货地址</a></li>
-                    <li><a href="#">缺货登记</a></li>
-                    <li><a href="#">跟踪订单</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-                <div class="left_m_t t_bg2">会员中心</div>
-                <ul>
-                    <li><a href="Member_User.html">用户信息</a></li>
+
+                    <li><a href="/index/Personalcenter/my_order">我的订单</a></li>
+                    <li><a href="/index/Personalcenter/shipping_add">收货地址</a></li>
+                    <li><a href="/index/Personalcenter/safety">账户安全</li>
                     <li><a href="Member_Collect.html">我的收藏</a></li>
                     <li><a href="Member_Msg.html">我的留言</a></li>
-                    <li><a href="Member_Links.html">推广链接</a></li>
-                    <li><a href="#">我的评论</a></li>
                 </ul>
             </div>
-            <div class="left_m">
-                <div class="left_m_t t_bg3">账户中心</div>
-                <ul>
-                    <li><a href="Member_Safe.html">账户安全</a></li>
-                    <li><a href="Member_Packet.html">我的红包</a></li>
-                    <li><a href="Member_Money.html">资金管理</a></li>
-                </ul>
-            </div>
-            <div class="left_m">
-                <div class="left_m_t t_bg4">分销中心</div>
-                <ul>
-                    <li><a href="Member_Member.html">我的会员</a></li>
-                    <li><a href="Member_Results.html">我的业绩</a></li>
-                    <li><a href="Member_Commission.html">我的佣金</a></li>
-                    <li><a href="Member_Cash.html">申请提现</a></li>
-                </ul>
-            </div>
+
+
+
+
         </div>
